--- a/Portfolio 1/style.css
+++ b/Portfolio 1/style.css
@@ -9,7 +9,7 @@ html,body{
     font-family: 'Poppins', sans-serif;
     background-color: rgb(0,0,33);
     color: white;
-                                                
+    overflow-x: hidden;
 }
 .main1{
     height: 100%;
